fix: reemplazar lucide-astro por componente Star local para que el build pase en Netlify

--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "astro": "^5.0.0",
     "@astrojs/mdx": "^4.0.0",
-    "@astrojs/tailwind": "^5.0.0",
-    "lucide-astro": "^0.469.0"
+    "@astrojs/tailwind": "^5.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
